output
gcc -g src/util.c src/lex.c test/lex-test.c -o lex-test
gcc -g src/util.c test/util-test.c -o util-test
gcc -g src/ajj.c src/util.c src/lex.c src/bc.c src/parse.c src/object.c
src/parse.c: In function ‘parse_for_body’:
src/parse.c:1517:5: error: incompatible type for argument 1 of ‘tk_move’
     tk_move(p->tk);
     ^
In file included from src/parse.c:4:0:
src/lex.h:110:10: note: expected ‘struct tokenizer *’ but argument is of type ‘struct tokenizer’
 token_id tk_move( struct tokenizer* tk );
          ^
src/parse.c:1570:5: error: incompatible type for argument 1 of ‘tk_move’
     tk_move(p->tk);
     ^
In file included from src/parse.c:4:0:
src/lex.h:110:10: note: expected ‘struct tokenizer *’ but argument is of type ‘struct tokenizer’
 token_id tk_move( struct tokenizer* tk );
          ^
src/parse.c: In function ‘parse’:
src/parse.c:2233:12: error: expected expression at end of input
     struct program* prg = 
            ^
src/parse.c:2233:12: error: expected declaration or statement at end of input
src/parse.c:2233:12: error: expected declaration or statement at end of input
make: *** [test] Error 1
